Added author, description, keywords for meta

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="rmh, harish rm, web development, web designing, javascript, react, website, freelancer, coimbatore, india "
+    />
+    <meta
+      name="description"
+      content="Hello World, I'm a Web developer, eager to learn more and upskill myself in new trends."
+    />
+    <meta name="author" content="Harish RM" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="shortcut icon" type="x-icon" href="h-icon.png" />
     <link rel="stylesheet" href="./index.css" />
