Added additional ui behaviours in about me section

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
       <div class="font-semibold nav-options">
         <ul class="flex space-x-4">
           <li class="border-b-0 hover:border-b border-white">
-            <a href="#about">About Me</a>
-          </li>
-          <li class="border-b-0 hover:border-b border-white">
             <a href="#skills">Skills</a>
           </li>
           <li class="border-b-0 hover:border-b border-white">
             <a href="#exp">Experience</a>
+          </li>
+          <li class="border-b-0 hover:border-b border-white">
+            <a href="#about">About Me</a>
           </li>
         </ul>
       </div>
@@ -79,34 +79,6 @@
         </button>
       </div>
     </div>
-    <div
-      class="h-screen border w-full flex flex-col items-center bg-blue-300 text-white"
-      id="about"
-    >
-      <div
-        id="about-con"
-        class="pt-20 flex flex-col justify-center items-center"
-      >
-        <span class="text-xl">Get to know more</span>
-        <div class="text-7xl">About Me</div>
-      </div>
-      <div
-        class="mt-20 flex justify-center space-x-4 items-center card-con h-3/5"
-      >
-        <div class="card shadow-xl" style="--imgbg: url('images/image-1.jpg')">
-          <div class="card-title">Blah Blah</div>
-        </div>
-        <div class="card shadow-xl" style="--imgbg: url('images/image-2.jpeg')">
-          <div class="card-title">Anime Lover</div>
-        </div>
-        <div class="card shadow-xl" style="--imgbg: url('images/image-3.jpeg')">
-          <div class="card-title">Game Lover</div>
-        </div>
-        <div class="card shadow-xl" style="--ex: white">
-          <div class="card-title">Trying to be Fix</div>
-        </div>
-      </div>
-    </div>
     <div class="h-screen w-full bg-blue-400 text-white" id="skills">
       <div
         id="about-con"
@@ -123,6 +95,58 @@
       >
         <span class="text-xl">Browser my project</span>
         <div class="text-7xl">Experience</div>
+      </div>
+    </div>
+    <div
+      class="h-screen border w-full flex flex-col items-center bg-blue-300 text-white"
+      id="about"
+    >
+      <div
+        id="about-con"
+        class="pt-20 flex flex-col justify-center items-center"
+      >
+        <span class="text-xl">Get to know more</span>
+        <div class="text-7xl">About Me</div>
+      </div>
+      <div
+        class="mt-20 flex justify-center space-x-4 items-center card-con h-3/5 opacity-0 translate-x-20"
+      >
+        <div class="card shadow-xl" style="--imgbg: url('images/image-1.jpg')">
+          <div class="card-title">Career</div>
+          <div class="card-content hidden">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sit
+            quia at quis iusto reprehenderit veritatis nesciunt modi dolores
+            repudiandae, pariatur praesentium velit, ducimus vel. Quas est
+            molestias rem reiciendis.
+          </div>
+        </div>
+        <div class="card shadow-xl" style="--imgbg: url('images/image-2.jpeg')">
+          <div class="card-title">Anime Lover</div>
+          <div class="card-content hidden">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sit
+            quia at quis iusto reprehenderit veritatis nesciunt modi dolores
+            repudiandae, pariatur praesentium velit, ducimus vel. Quas est
+            molestias rem reiciendis.
+          </div>
+        </div>
+        <div class="card shadow-xl" style="--imgbg: url('images/image-3.jpeg')">
+          <div class="card-title">Game Lover</div>
+          <div class="card-content hidden">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sit
+            quia at quis iusto reprehenderit veritatis nesciunt modi dolores
+            repudiandae, pariatur praesentium velit, ducimus vel. Quas est
+            molestias rem reiciendis.
+          </div>
+        </div>
+        <div class="card shadow-xl" style="--ex: white">
+          <div class="card-title">Trying to be Fix</div>
+          <div class="card-content hidden">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sit
+            quia at quis iusto reprehenderit veritatis nesciunt modi dolores
+            repudiandae, pariatur praesentium velit, ducimus vel. Quas est
+            molestias rem reiciendis.
+          </div>
+        </div>
       </div>
     </div>
     <script defer type="text/javascript" src="./index.js"></script>
