about page with core skills

--- a/index.html
+++ b/index.html
@@ -79,13 +79,39 @@
         </button>
       </div>
     </div>
-    <div class="h-screen w-full bg-blue-400 text-white" id="skills">
+    <div
+      class="h-screen w-full bg-blue-400 text-white flex flex-col space-y-20 items-center"
+      id="skills"
+    >
       <div
         id="about-con"
         class="pt-20 flex flex-col justify-center items-center"
       >
-        <span class="text-xl">Explore my</span>
+        <span class="text-xl">Explore my core</span>
         <div class="text-7xl">Skill Sets</div>
+      </div>
+      <div class="skill-con">
+        <div class="skill-icons">
+          <div class="skillImgBx active" style="--i: 1" data-name="JavaScript">
+            <img src="./images/javascript_icon_130900.png" />
+          </div>
+          <div class="skillImgBx" style="--i: 2" data-name="HTML">
+            <img src="./images/file_type_html_icon_130541.png" />
+          </div>
+          <div class="skillImgBx" style="--i: 3" data-name="CSS">
+            <img src="./images/file_type_css_icon_130661.png" />
+          </div>
+          <div class="skillImgBx" style="--i: 4" data-name="React">
+            <img src="./images/react_icon_130845.png" />
+          </div>
+          <div class="skillImgBx" style="--i: 5" data-name="Tailwind CSS">
+            <img src="./images/file_type_tailwind_icon_130128.png" />
+          </div>
+          <div class="skillImgBx" style="--i: 6" data-name="AJAX">
+            <img src="./images/ajax2010.jpg" />
+          </div>
+        </div>
+        <div class="skill-content">JavaScript</div>
       </div>
     </div>
     <div class="h-screen w-full bg-blue-500 text-white" id="exp">
@@ -114,10 +140,10 @@
         <div class="card shadow-xl" style="--imgbg: url('images/image-1.jpg')">
           <div class="card-title">Career</div>
           <div class="card-content hidden">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sit
-            quia at quis iusto reprehenderit veritatis nesciunt modi dolores
-            repudiandae, pariatur praesentium velit, ducimus vel. Quas est
-            molestias rem reiciendis.
+            Experienced front-end/UI developer with 5 years of expertise in web
+            development, specializing in JavaScript and React.js. Demonstrated a
+            passion for crafting interactives and prioritizing user-friendliness
+            across all stages of the SDLC.
           </div>
         </div>
         <div class="card shadow-xl" style="--imgbg: url('images/image-2.jpeg')">
