Added translateX in js itself to avoid right space

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="circle"></div>
     <div class="circle"></div> -->
     <nav
-      class="sticky relative top-0 z-50 py-5 w-full flex items-center justify-between px-10 text-white text-2xl"
+      class="py-5 w-full flex items-center justify-between px-10 text-white text-2xl"
     >
       <div class="font-semibold logo"><a href="#main">R M H</a></div>
       <div class="font-semibold nav-options">
@@ -129,13 +129,13 @@
     >
       <div
         id="about-con"
-        class="pt-20 flex flex-col justify-center items-center"
+        class="mt-20 flex flex-col justify-center items-center"
       >
         <span class="text-xl">Get to know more</span>
         <div class="text-7xl">About Me</div>
       </div>
       <div
-        class="mt-20 flex justify-center space-x-4 items-center card-con h-3/5 opacity-0 translate-x-20"
+        class="mt-20 flex justify-center space-x-4 items-center card-con h-3/5 opacity-0"
       >
         <div class="card shadow-xl" style="--imgbg: url('images/image-1.jpg')">
           <div class="card-title">Career</div>
