Additional @ME stylies

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         id="about-con"
         class="pt-20 flex flex-col justify-center items-center"
       >
-        <span class="text-xl">Explore my core</span>
-        <div class="text-7xl">Skill Sets</div>
+        <span class="text-xl section-sub-title">Explore my core</span>
+        <div class="text-7xl section-title">Skill Sets</div>
       </div>
       <div class="skill-con">
         <div class="skill-icons">
@@ -119,8 +119,8 @@
         id="about-con"
         class="pt-20 flex flex-col justify-center items-center"
       >
-        <span class="text-xl">Browser my project</span>
-        <div class="text-7xl">Experience</div>
+        <span class="text-xl section-sub-title">Browser my project</span>
+        <div class="text-7xl section-title">Experience</div>
       </div>
     </div>
     <div
@@ -131,8 +131,8 @@
         id="about-con"
         class="mt-20 flex flex-col justify-center items-center"
       >
-        <span class="text-xl">Get to know more</span>
-        <div class="text-7xl">About Me</div>
+        <span class="text-xl section-sub-title">Get to know more</span>
+        <div class="text-7xl section-title">About Me</div>
       </div>
       <div
         class="mt-20 flex justify-center space-x-4 items-center card-con h-3/5 opacity-0"
