Addded content for About us

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </div>
     </div>
     <div
-      class="h-screen border w-full flex flex-col items-center bg-blue-300 text-white"
+      class="h-screen border w-full flex flex-col items-center bg-blue-300 text-white overflow-y-auto"
       id="about"
     >
       <div
@@ -147,30 +147,32 @@
           </div>
         </div>
         <div class="card shadow-xl" style="--imgbg: url('images/image-2.jpeg')">
-          <div class="card-title">Anime Lover</div>
+          <div class="card-title">Anime Quests</div>
           <div class="card-content hidden">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sit
-            quia at quis iusto reprehenderit veritatis nesciunt modi dolores
-            repudiandae, pariatur praesentium velit, ducimus vel. Quas est
-            molestias rem reiciendis.
+            Started with "Death Note," but it's Naruto, Jiraiya, and Guy
+            Sensei's spirited characters that stand out. Joining Luffy in "One
+            Piece" and unraveling mysteries with Detective Conan add excitement.
+            Anime, full of determination and friendship, makes my journey
+            unforgettable.
           </div>
         </div>
         <div class="card shadow-xl" style="--imgbg: url('images/image-3.jpeg')">
-          <div class="card-title">Game Lover</div>
+          <div class="card-title">Gaming Journeys</div>
           <div class="card-content hidden">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sit
-            quia at quis iusto reprehenderit veritatis nesciunt modi dolores
-            repudiandae, pariatur praesentium velit, ducimus vel. Quas est
-            molestias rem reiciendis.
+            Late to gaming, "Mini Militia" on mobile ignited my passion; on PS4,
+            "God of War 4," "Red Dead Redemption 2," and "The Last of Us"
+            crafted unforgettable adventures. Each game, a unique blend of
+            emotion and excitement, shapes my digital odyssey, turning every
+            play session into a cherished memory.
           </div>
         </div>
-        <div class="card shadow-xl" style="--ex: white">
-          <div class="card-title">Trying to be Fix</div>
+        <div class="card shadow-xl" style="--imgbg: url('images/image-4.webp')">
+          <div class="card-title">Healthful Beginnings!</div>
           <div class="card-content hidden">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sit
-            quia at quis iusto reprehenderit veritatis nesciunt modi dolores
-            repudiandae, pariatur praesentium velit, ducimus vel. Quas est
-            molestias rem reiciendis.
+            Stepping into health post-25, I hit the gym, track calories, and
+            embrace walks. Despite occasional cheat days, I celebrate the
+            journey, finding happiness in the progress toward a healthier
+            lifestyle.
           </div>
         </div>
       </div>
