Added social profile section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,27 @@
         >
           Download Resume
         </button>
+        <div
+          class="social-links flex justify-between translate-x-full opacity-0"
+        >
+          <a href="https://github.com/rmh96" target="_blank">
+            <img
+              class="h-full"
+              src="./images/github-logo_icon-icons.com_73546.png"
+              alt="My Github Page"
+            />
+          </a>
+          <a
+            href="https://in.linkedin.com/in/harish-mukundhaprasath-aaa3b5117"
+            target="_blank"
+          >
+            <img
+              class="h-full"
+              src="./images/linkedin_icon-icons.com_65929.png"
+              alt="My Linkedin Page"
+            />
+          </a>
+        </div>
       </div>
     </div>
     <div
