Modified c-cursor to appear only in large screens

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </div>
     </div>
     <div
-      class="h-screen border w-full flex flex-col items-center bg-blue-300 text-white overflow-y-auto"
+      class="h-screen w-full flex flex-col items-center bg-blue-300 text-white overflow-y-auto"
       id="about"
     >
       <div
