Added Project section code

--- a/index.html
+++ b/index.html
@@ -137,22 +137,14 @@
       </div>
     </div>
     <div
-      class="h-screen w-full bg-blue-500 text-white flex flex-col items-center space-y-10"
+      class="w-full bg-blue-500 text-white flex flex-col items-center space-y-10 overflow-y-auto"
       id="exp"
     >
-      <div
-        id="about-con"
-        class="pt-20 flex flex-col justify-center items-center"
-      >
+      <div id="exp-con" class="pt-20 flex flex-col justify-center items-center">
         <span class="text-xl section-sub-title">Browser my project</span>
         <div class="text-6xl section-title">Case Studies</div>
       </div>
-      <div class="project-con">
-        <div class="project-card">
-          <div class="project-image"></div>
-          <div class=""></div>
-        </div>
-      </div>
+      <div class="project-con"></div>
     </div>
     <div
       class="h-screen w-full flex flex-col items-center bg-blue-300 text-white overflow-y-auto"
