Added resume click function

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           id="btn-loading"
           class="opacity-0 relative text-xl mt-10 p-3 border-2 rounded-full"
         >
-          Download Resume
+          View Resume
         </button>
         <div
           class="social-links flex justify-between translate-x-full opacity-0"
