Update index.html with Google site verification

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="cXudEBYXGt4-jFUkwpTQ14cYF1WQGyMJEnoIo-QXczM" />
     <meta
       name="keywords"
       content="rmh, harish rm, Harish RM, web development, web designing, javascript, react, website, freelancer, coimbatore, india "
