Added anchor tag for View Resume

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-site-verification" content="cXudEBYXGt4-jFUkwpTQ14cYF1WQGyMJEnoIo-QXczM" />
+    <meta
+      name="google-site-verification"
+      content="cXudEBYXGt4-jFUkwpTQ14cYF1WQGyMJEnoIo-QXczM"
+    />
     <meta
       name="keywords"
       content="rmh, harish rm, Harish RM, web development, web designing, javascript, react, website, freelancer, coimbatore, india "
@@ -67,7 +70,11 @@
           id="btn-loading"
           class="opacity-0 relative text-xl mt-10 p-3 border-2 rounded-full"
         >
-          View Resume
+          <a
+            href="./files/Harish_RM_Frontend_Developer_2024.pdf"
+            download="HarishRM-Resume"
+            >View Resume</a
+          >
         </button>
         <div
           class="social-links flex justify-between translate-x-full opacity-0"
