--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Hi This is Harish RM, I'm Happy because you are looking into my code!! -->
+<!-- Hi, This is Harish, I'm Happy because you are looking into my code!! -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,11 +12,11 @@
     />
     <meta
       name="keywords"
-      content="rmh, harish rm, Harish RM, web development, web designing, javascript, react, website, freelancer, coimbatore, india "
+      content="rmh, rmh portfolio, harish rm, Harish RM, harish react js, web development, web designing, javascript, react, website, freelancer, coimbatore, india "
     />
     <meta
       name="description"
-      content="Hello World, I'm a Web developer, eager to learn more and upskill myself in new trends."
+      content="Highly motivated Web Developer with experience in building Responsive, large scale web applications.  Specialized in React JS framework."
     />
     <meta name="author" content="Harish RM" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -30,7 +30,7 @@
     />
     <title>Harish | Portfolio</title>
   </head>
-  <body>
+  <body class="bg-blue-300">
     <div id="trailer"></div>
     <nav
       class="py-5 w-full flex items-center justify-between px-10 text-white text-2xl"
@@ -71,8 +71,8 @@
           class="opacity-0 relative text-xl mt-10 p-3 border-2 rounded-full"
         >
           <a
-            href="./files/Harish_RM_Frontend_Developer_2024.pdf"
-            download="HarishRM-Resume"
+            href="./files/Harish_Frontend_Developer_Resume.pdf"
+            download="Harish-Resume"
             >View Resume</a
           >
         </button>
@@ -155,7 +155,7 @@
       <div class="project-con"></div>
     </div>
     <div
-      class="h-screen w-full flex flex-col items-center bg-blue-300 text-white overflow-y-auto"
+      class="h-screen w-full flex flex-col items-center bg-blue-300 text-white"
       id="about"
     >
       <div
