--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
               class="h-full"
               src="./images/github-logo_icon-icons.com_73546.png"
               alt="My Github Page"
+              loading="lazy"
             />
           </a>
           <a
@@ -94,6 +95,7 @@
               class="h-full"
               src="./images/linkedin_icon-icons.com_65929.png"
               alt="My Linkedin Page"
+              loading="lazy"
             />
           </a>
         </div>
@@ -113,32 +115,38 @@
       <div class="skill-con">
         <div class="skill-icons">
           <div class="skillImgBx active" style="--i: 1" data-name="JavaScript">
-            <img src="./images/javascript_icon_130900.png" />
+            <img src="./images/javascript_icon_130900.png" alt="javascript" />
           </div>
           <div class="skillImgBx" style="--i: 2" data-name="HTML">
-            <img src="./images/file_type_html_icon_130541.png" />
+            <img src="./images/file_type_html_icon_130541.png" alt="html" />
           </div>
           <div class="skillImgBx" style="--i: 3" data-name="CSS">
-            <img src="./images/file_type_css_icon_130661.png" />
+            <img src="./images/file_type_css_icon_130661.png" alt="css" />
           </div>
           <div class="skillImgBx" style="--i: 4" data-name="React">
-            <img src="./images/react_icon_130845.png" />
+            <img src="./images/react_icon_130845.png" alt="react" />
           </div>
           <div class="skillImgBx" style="--i: 5" data-name="Tailwind CSS">
-            <img src="./images/file_type_tailwind_icon_130128.png" />
+            <img
+              src="./images/file_type_tailwind_icon_130128.png"
+              alt="tailwindcss"
+            />
           </div>
           <div class="skillImgBx" style="--i: 6" data-name="AJAX">
-            <img src="./images/ajax2010.jpg" />
+            <img src="./images/ajax2010.jpg" alt="ajax" />
           </div>
           <div class="skillImgBx" style="--i: 7" data-name="Redux">
-            <img src="./images/redux_original_logo_icon_146365.png" />
+            <img
+              src="./images/redux_original_logo_icon_146365.png"
+              alt="redux"
+            />
           </div>
           <div
             class="skillImgBx"
             style="--i: 8"
             data-name="React Testing Library"
           >
-            <img src="./images/react-testing-library.png" />
+            <img src="./images/react-testing-library.png" alt="testing-lib" />
           </div>
         </div>
         <div class="skill-content">JavaScript</div>
