--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="card shadow-xl" style="--imgbg: url('images/image-1.jpg')">
           <div class="card-title">Career</div>
           <div class="card-content hidden">
-            Experienced front-end/UI developer with 5 years of expertise in web
+            Experienced front-end/UI developer with 5 years and 7 months of expertise in web
             development, specializing in JavaScript and React.js. Demonstrated a
             passion for crafting interactives and prioritizing user-friendliness
             across all stages of the SDLC.
