Update index.html with new resume file name

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           class="opacity-0 relative text-xl mt-10 p-3 border-2 rounded-full"
         >
           <a
-            href="./files/Harish_Frontend_Developer_Resume.pdf"
+            href="./files/HarishSFEResume.pdf"
             download="Harish-Resume"
             >View Resume</a
           >
